--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "pub": "npm run build && npm publish",
     "dev": "next dev"
   },
+  "dependencies": {
+    "@radix-ui/react-popover": "^1.0.7"
+  },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@radix-ui/react-popover": "^1.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
