--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "clean": "rm -rf dist",
     "build": "pnpm run code-style:fix && pnpm run clean && bunchee",
     "pub": "pnpm run build && pnpm publish",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint . --report-unused-disable-directives --max-warnings 0 --fix",
+    "lint": "eslint . --ignore-path .gitignore --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ignore-path .gitignore --report-unused-disable-directives --max-warnings 0 --fix",
     "fmt:fix": "prettier --cache --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "fmt": "prettier --check \"src/**/*.ts\" \"src/**/*.tsx\"",
     "code-style": "pnpm run fmt && pnpm run lint",
