--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "@expanseagency/react-datepicker",
+  "name": "@wearepointers/react-datepicker",
   "description": "A simple, lightweight, accessible, and easily customizable datepicker built with React and Tailwind CSS.",
   "version": "1.0.2",
   "main": "./dist/es/index.js",
   "module": "./dist/es/index.js",
   "types": "./dist/es/index.d.ts",
-  "author": "Expanse Agency",
+  "author": "Pointers",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/expanse-agency/react-datepicker.git"
+    "url": "git+https://github.com/wearepointers/react-datepicker.git"
   },
   "bugs": {
-    "url": "https://github.com/expanse-agency/react-datepicker/issues"
+    "url": "https://github.com/wearepointers/react-datepicker/issues"
   },
-  "homepage": "https://github.com/expanse-agency/react-datepicker#README",
+  "homepage": "https://github.com/wearepointers/react-datepicker#README",
   "files": [
     "dist"
   ],
