fix: add frozen lockfile

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies 🔧
-        run: pnpm install
+        run: pnpm install --frozen lockfile
 
       - name: Publish package on NPM 📦
         run: pnpm pub
