fix: type error

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,7 +24,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install dependencies 🔧
-        run: pnpm install --frozen lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Lint 🧹
         run: pnpm code-style
