--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "@radix-ui/react-popover": "^1.0.7"
   },
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18 || ^19",
+    "react-dom": "^18 || ^19",
     "tailwindcss": "^3"
   },
   "devDependencies": {
